--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "http-errors": "^2.0.0",
     "jade": "^1.11.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.3"
+    "mysql2": "^3.9.3",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
